--- a/Run-tab/index.html
+++ b/Run-tab/index.html
@@ -30,6 +30,21 @@
     </nav>
   </header>
   
+  <div class="step">
+    <h3>Step 1.</h3>
+    <div class="step-info">
+      <div class="step-img">
+        <img src="C:\Users\jeeva\Downloads\36893565_1976980332593952_3476326536309637120_n.jpg " alt="" />
+      </div>
+      <div class="step-text">
+        <h4>Fill Out The Form Above</h4>
+        <p>You're already here, so why not?</p>
+      </div>
+    </div>
+  </div>
+
+
+
   <!--hero section-->
   <section class="hero">
     <div class="hero-cta">
@@ -42,6 +57,7 @@
          haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
       </p>
     </div>
+
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -79,14 +95,20 @@
   </section>
   
   <!-- "what we do" section -->
+  <!-- Wrap every h2 with a class of "section-title" in this div! -->
+
   <section id="what-we-do" class="intro">
+    <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
+    </div>
+    <div class="flex-row">
     <p>
 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
  chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
  pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
   umami deep v craft
     </p>
+    </div>
   </section>
   
   <!-- "what you do" section -->
