--- a/Run-tab/index.html
+++ b/Run-tab/index.html
@@ -98,7 +98,7 @@
   <!-- "what we do" section -->
   <!-- Wrap every h2 with a class of "section-title" in this div! -->
 
-  <section id="what-we-do" class="intro">
+  <section id="what-we-do" class="steps">
     <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
     </div>
@@ -110,6 +110,60 @@ butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr
   umami deep v craft
     </p>
     </div>
+
+    <div class="step">
+      <h3>Step 1.</h3>
+      <p>
+butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
+chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
+ pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
+umami deep v craft
+            </p>
+      </div>
+
+      <div class="step">
+        <h3>Step 2.</h3>
+        <p>
+  butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
+  chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
+   pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
+  umami deep v craft
+              </p>
+        </div> 
+        
+        <div class="step">
+          <h3>Step 3.</h3>
+          <p>
+    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
+    chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
+     pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
+    umami deep v craft
+                </p>
+          </div>       
+
+
+          <div class="step">
+            <h3>Step 4.</h3>
+            <p>
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
+      chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
+       pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
+      umami deep v craft
+                  </p>
+            </div>
+
+            <div class="step">
+              <h3>Step 5.</h3>
+              <p>
+        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle
+        chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache 
+         pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia
+        umami deep v craft
+                    </p>
+              </div>
+
+
+                   
   </section>
   
   <!-- "what you do" section -->
@@ -251,5 +305,5 @@ butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr
    &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
-  </body>
+    </body>
 </html>
